--- a/styles.css
+++ b/styles.css
@@ -22,6 +22,9 @@ body {
     font-size: 3.5rem;
     font-weight: bold;
   }
+  html {
+    scroll-behavior: smooth;
+  }
   
   .jumbotron p {
     font-size: 1.25rem;
